# smart_zone_camera

./: CMakeLists.txt  README.md  main.cpp  smart_zone_camera.sh
inc/: Piframe.h  SmartZoneCamera.h  area.h  dataType.h  define.h  gstreamerServer.h  httpClient.h  httpServer.h  yoloX.h
include/: area.h  define.h  httpClient.h  httpServer.h
source/: area.cpp  gstreamerServer.cpp  httpClient.cpp  httpServer.cpp  yoloV8.cpp
src/: Piframe.cpp  SmartZoneCamera.cpp  area.cpp  gstreamerServer.cpp  httpClient.cpp  httpServer.cpp  yoloX.cpp
